--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -371,3 +371,9 @@ header {
   border-top: 2px solid white;
   text-align: center;
 }
+
+// PHOTO SHOW STYLING
+
+.photo .like-links {
+  float: none;
+}
