--- a/app/views/albums/_new.html.erb
+++ b/app/views/albums/_new.html.erb
@@ -16,7 +16,7 @@
       <label for="<%= 'photo-#{photo.id}' %>">
         <figure>
           <% if photo.caption %>
-            <figcaption><%= photo.caption.html_escape %></figcaption>
+            <figcaption><%= photo.caption %></figcaption>
           <% end %>
           <%= image_tag photo.img.url(:medium) %>
         </figure>
