--- a/app/views/albums/_show.html.erb
+++ b/app/views/albums/_show.html.erb
@@ -1,5 +1,5 @@
 <div class="photos">
-  <h3><%= album.title.html_escape %></h3>
+  <h3><%= album.title %></h3>
   <br>
   <ul>
     <% album.photos.each do |photo| %>
@@ -7,7 +7,7 @@
         <a href="<%= user_photo_url(params[:user_id], photo) %>" data-remote="true">
         <figure>
           <% if photo.caption %>
-            <figcaption><%= photo.caption.html_escape %></figcaption>
+            <figcaption><%= photo.caption %></figcaption>
           <% end %>
           <%= image_tag photo.img.url %>
         </figure>
