--- a/app/views/message_threads/_index.html.erb
+++ b/app/views/message_threads/_index.html.erb
@@ -9,7 +9,7 @@
           <%= image_tag friend.profile.profile_img.url(:small) %>
         </div>
         <div class="user-name">
-          <%= friend.name.html_escape %>
+          <%= friend.name %>
         </div>
       </a>
     </li>
