--- a/app/views/profiles/_show.html.erb
+++ b/app/views/profiles/_show.html.erb
@@ -5,11 +5,11 @@
   </div>
   <div class="about-list">
     <ul>
-      <li><h3><%= user.name.html_escape %></h3></li>
+      <li><h3><%= user.name %></h3></li>
       <li>Birthday: &nbsp;<%= user.bday %></li>
-      <li>Location: &nbsp;<%= profile.location.html_escape %></li>
-      <li>Employer: &nbsp;<%= profile.employer.html_escape %></li>
-      <li>School: &nbsp;<%= profile.school.html_escape %></li>
+      <li>Location: &nbsp;<%= profile.location %></li>
+      <li>Employer: &nbsp;<%= profile.employer %></li>
+      <li>School: &nbsp;<%= profile.school %></li>
       <% if params[:user_id].to_i == current_user.id %>
       <li><a class="edit-profile-link" href="<%= edit_user_profile_url(current_user) %>" data-remote="true">Edit Your Profile</a></li>
       <% end %>
@@ -19,7 +19,7 @@
     <a href="<%= user_albums_url(user) %>" data-remote="true">Photos</a>
     <% num_friends = user.friends.count %>
     <% unless num_friends == 0 %>
-      <a href="<%= friends_user_url(user) %>" data-remote="true"><%= pluralize(num_friends, "Friend") %></a>
+      <a href="<%= user_friends_url(user) %>" data-remote="true"><%= pluralize(num_friends, "Friend") %></a>
     <% end %>
   </div>
 </div>
