--- a/app/views/message_threads/_index.html.erb
+++ b/app/views/message_threads/_index.html.erb
@@ -1,17 +1,21 @@
-<h1>Conversations</h1>
-<ul class="messaged-friends-list">
-  <% messaged_friends_with_thread.each do |pair| %>
-    <% friend = pair[0] %>
-    <% thread = pair[1] %>
-    <li>
-      <a href="<%= user_message_thread_url(current_user, thread) %>" data-remote="true">
-        <div class="user-img">
-          <%= image_tag friend.profile.profile_img.url(:small) %>
-        </div>
-        <div class="user-name">
-          <%= friend.name %>
-        </div>
-      </a>
-    </li>
-  <% end %>
-</ul>
+<div class="conversations">
+  <h2>Conversations</h2>
+  <ul class="messaged-friends-list">
+    <% messaged_friends_with_thread.each do |pair| %>
+      <% friend = pair[0] %>
+      <% thread = pair[1] %>
+      <li>
+        <a href="<%= user_message_thread_url(current_user, thread) %>" data-remote="true">
+          <div class="group">
+            <div class="user-message-img">
+              <%= image_tag friend.profile.profile_img.url(:small) %>
+            </div>
+            <div class="user-message-info">
+              <strong><%= friend.name %></strong>
+            </div>
+          </div>
+        </a>
+      </li>
+    <% end %>
+  </ul>
+</div>
