--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,1 +1,4 @@
-<%= render partial: "profiles/form", locals: {profile: @profile, method: "edit"} %>
+<div class="profile-form-container">
+  <h2>Edit Your Profile:</h2>
+  <%= render partial: "profiles/form", locals: {profile: @profile, method: "edit"} %>
+</div>
