create profile styling

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,1 +1,4 @@
+<div class="profile-form-container">
+  <h2>Create Your Profile:</h2>
 <%= render partial: "profiles/form", locals: {profile: @profile, method: "post" } %>
+</div>
