--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -33,7 +33,7 @@
     <br>
     <label>Birthday:
       <br>
-      <input type="date" name="user[bday]">
+      <input class="bday" type="date" name="user[bday]">
     </lable>
     <br><br>
     <input type="radio" name="user[gender]" value="f">Female</input>
