--- a/app/views/users/_show_friend.html.erb
+++ b/app/views/users/_show_friend.html.erb
@@ -9,29 +9,29 @@
 <div class="user-info">
   <% if user == current_user %>
     <% friendship = Friendship.find_pair(current_user, friend) %>
-    <form class="friend-button" action="<%= friendship_url(friendship) %>" data-remote="true" method="post">
+    <form action="<%= friendship_url(friendship) %>" data-remote="true" method="post">
       <input
         name="authenticity_token"
         type="hidden"
         value="<%= form_authenticity_token %>">
       <input type="hidden" name="_method" value="DELETE">
-      <input type="submit" value="Unfriend">
+      <input class="friend-button" type="submit" value="Unfriend">
     </form>
   <% elsif params[:user_id] != current_user.id && !(current_user.friends.include?(friend) || current_user.pending_request_friends.include?(friend) || current_user.pending_friends.include?(friend)) %>
-    <form class="friend-button" action="<%= user_friendship_url(friend) %>" data-remote="true" method="post">
+    <form action="<%= user_friendship_url(friend) %>" data-remote="true" method="post">
       <input
         name="authenticity_token"
         type="hidden"
         value="<%= form_authenticity_token %>">
-      <input type="submit" value="Friend Request">
+      <input class="friend-button" type="submit" value="Friend Request">
     </form>
   <% end %>
-  <form class="friend-button" action="<%= new_message_url %>" data-remote="true" method="get">
+  <form action="<%= new_message_url %>" data-remote="true" method="get">
     <input
       name="authenticity_token"
       type="hidden"
       value="<%= form_authenticity_token %>">
     <input type="hidden" name="recipient_id" value="<%= friend.id %>">
-    <input type="submit" value="Send Message">
+    <input class="friend-button" type="submit" value="Send Message">
   </form>
 </div>
