--- a/app/views/users/_show_user.html.erb
+++ b/app/views/users/_show_user.html.erb
@@ -9,29 +9,29 @@
 <div class="user-info">
   <% if pending_friends.include?(user) %>
     <% friendship = Friendship.find_pair(current_user, user) %>
-    <form class="friend-button" action="<%= deny_friendship_url(friendship) %>" data-remote="true" method="post">
+    <form action="<%= deny_friendship_url(friendship) %>" data-remote="true" method="post">
       <input
         name="authenticity_token"
         type="hidden"
         value="<%= form_authenticity_token %>">
       <input type="hidden" name="_method" value="DELETE">
-      <input type="submit" value="Pending: Cancel">
+      <input class="friend-button" type="submit" value="Pending: Cancel">
     </form>
   <% else %>
-    <form class="friend-button" action="<%= user_friendship_url(user) %>" data-remote="true" method="post">
+    <form action="<%= user_friendship_url(user) %>" data-remote="true" method="post">
       <input
         name="authenticity_token"
         type="hidden"
         value="<%= form_authenticity_token %>">
-      <input type="submit" value="Friend Request">
+      <input class="friend-button" type="submit" value="Friend Request">
     </form>
   <% end %>
-  <form class="friend-button" action="<%= new_message_url %>" data-remote="true" method="get">
+  <form action="<%= new_message_url %>" data-remote="true" method="get">
     <input
       name="authenticity_token"
       type="hidden"
       value="<%= form_authenticity_token %>">
     <input type="hidden" name="recipient_id" value="<%= user.id %>">
-    <input type="submit" value="Send Message">
+    <input class="friend-button" type="submit" value="Send Message">
   </form>
 </div>
